--- a/config.toml
+++ b/config.toml
@@ -223,7 +223,7 @@ enableGitInfo = false
   [[params.social]]
     icon = "envelope"
     icon_pack = "fa"
-    link = "mailto:test@example.org"
+    link = "mailto:sagekylie07@gmail.com"
 
   [[params.social]]
     icon = "twitter"
@@ -253,7 +253,7 @@ enableGitInfo = false
   name = "Home"
   url = "#about"
   weight = 1
-
+  
 [[menu.main]]
   name = "Publications"
   url = "#publications_selected"
